--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 				<input type="password" placeholder="Enter Password" name="psw" required>
 			
 				<button type="button" onclick="startGame();">Login</button>
-				<input type="checkbox" checked="checked"> Remember me
 				</div>
 			
 				<div class="container" style="background-color:#f1f1f1">
@@ -85,6 +84,9 @@
 		</div>
 		<div id="win">
 			<img src="IMAGES/youwon.png">
+		</div>
+		<div id="lose">
+			<img src="IMAGES/youlose.png">
 		</div>
 	</center>
 	</body>
